# pyfin

./: interfaces.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
discordbot/: discord.py
notify/: discord.py
scrap/: ib_margin_rate.py  ib_ref_bm_rate.py  ib_spot_cur_comission.py  qqq_holdings.py  voo_holdings.py
