[project]
name = "notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "pandas>=2.3.3",
    "quickchart-io>=2.0.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
